--- a/writing/r-references.bib
+++ b/writing/r-references.bib
@@ -17,6 +17,16 @@
   pages={38--64},
   year={1988},
   publisher={Elsevier}
+
+}
+
+@inproceedings{leon2022uncovering,
+  title={Uncovering Childrens' Category Representations with MCMCP},
+  author={Leon Villagra, Pablo and Ehrlich, Isaac and Lucas, Chris and Buchsbaum, Daphna},
+  booktitle={Proceedings of the Annual Meeting of the Cognitive Science Society},
+  volume={44},
+  number={44},
+  year={2022}
 }
 
 @article{perdreau2013artists,
@@ -7214,4 +7224,19 @@ doi = {10.1080/0144341960160302}
   note = {viridisLite package version 0.4.2},
   url = {https://sjmgarnier.github.io/viridis/},
   doi = {10.5281/zenodo.4678327},
+}
+@Manual{R-ggrepel,
+  title = {ggrepel: Automatically Position Non-Overlapping Text Labels with
+'ggplot2'},
+  author = {Kamil Slowikowski},
+  year = {2023},
+  note = {R package version 0.9.3},
+  url = {https://CRAN.R-project.org/package=ggrepel},
+}
+@Manual{R-patchwork,
+  title = {patchwork: The Composer of Plots},
+  author = {Thomas Lin Pedersen},
+  year = {2024},
+  note = {R package version 1.3.0},
+  url = {https://CRAN.R-project.org/package=patchwork},
 }
