anonymize author list in .rmd

--- a/writing/paper1_visualvocab.Rmd
+++ b/writing/paper1_visualvocab.Rmd
@@ -2,38 +2,6 @@
 title             : "Developmental changes in the precision of visual concept knowledge"
 shorttitle        : "Precision of visual concepts"
 
-author: 
-  - name          : "Bria Long"
-    affiliation   : "1"
-    corresponding : yes    # Define only one corresponding author
-    email         : "brlong@ucsd.edu"
- 
-  - name          : "Wanjing Anya Ma"
-    affiliation   : "2"
-    email         : "wanjingm@stanford.edu"
-    
-  - name          : "Alvin W. M. Tan"
-    affiliation   : "2"
-    email         : "tanawm@stanford.edu"
-    
-  - name          : "Rebecca Silverman"
-    affiliation   : "2"
-    email         : "rdsilver@stanford.edu"
-    
-  - name          : "Michael C. Frank"
-    affiliation   : "2"
-    email         : "mcfrank@stanford.edu"
-    
-  - name          : "Jason D. Yeatmean"
-    affiliation   : "2"
-    email         : "jyeatmaan@stanford.edu"
-    
-affiliation:
-  - id            : "1"
-    institution   : "University of California San Diego"
-  - id            : "2"
-    institution   : "Stanford University"
-
 authornote: |
   .
 
@@ -625,7 +593,7 @@ dist_by_4afc_by_item_by_age <- df.4AFC.distractor.summary.byPid %>%
 }
 
 if (RAW_DATA==FALSE){
-save(dist_by_4afc_by_item_by_age, file=here::here('data/preprocessed/dist_by_4afc_by_item_by_age.RData'))
+load(dist_by_4afc_by_item_by_age, file=here::here('data/preprocessed/dist_by_4afc_by_item_by_age.RData'))
 }
 
 ```
