--- a/writing/paper1_visualvocab.tex
+++ b/writing/paper1_visualvocab.tex
@@ -215,7 +215,7 @@
   pdfcreator={LaTeX via pandoc}}
 
 \title{Developmental changes in the precision of visual concept knowledge}
-\author{Bria Long\textsuperscript{1}, Wanjing Anya Ma\textsuperscript{2}, Alvin W. M. Tan\textsuperscript{2}, Rebecca Silverman\textsuperscript{2}, Michael C. Frank\textsuperscript{2}, \& Jason D. Yeatmean\textsuperscript{2}}
+\author{\phantom{0}}
 \date{}
 
 
@@ -225,11 +225,9 @@
 
 .
 
-Correspondence concerning this article should be addressed to Bria Long. E-mail: \href{mailto:brlong@ucsd.edu}{\nolinkurl{brlong@ucsd.edu}}
-
 }
 
-\affiliation{\vspace{0.5cm}\textsuperscript{1} University of California San Diego\\\textsuperscript{2} Stanford University}
+\affiliation{\phantom{0}}
 
 \abstract{%
 How precise are the visual representations that underlie children's understanding of words, and how does this precision change across development? We assessed children's visual vocabulary knowledge in a game where children heard a word (e.g., ``swordfish'') and had to choose a matching picture. Distractors were chosen to vary in their linguistic similarity to each target word in a multimodal language model. We collected data from a large sample of children (N = 3575, 3--14 year olds) and adults (N = 211 adults) and found gradual changes over development in children's ability to identify the image that a word referred to. When children made errors, younger children were more likely to choose unrelated distractors than older children; children's error patterns were best explained by combining linguistic and visual similarity. These results highlight that children have partial knowledge about many visual concepts and document a transition from coarse to finer-grained representations.
@@ -262,7 +260,7 @@ With these data, we investigated three main questions. First, we examined whethe
 
 \begin{figure}[H]
 
-{\centering \includegraphics[width=1\linewidth]{figures/stimuli} 
+{\centering \includegraphics[width=1\linewidth]{figures/fig1_stimuli} 
 
 }
 
