--- a/writing/r-references.bib
+++ b/writing/r-references.bib
@@ -7240,3 +7240,30 @@ doi = {10.1080/0144341960160302}
   note = {R package version 1.3.0},
   url = {https://CRAN.R-project.org/package=patchwork},
 }
+@Book{R-boot,
+  title = {Bootstrap Methods and Their Applications},
+  author = {A. C. Davison and D. V. Hinkley},
+  publisher = {Cambridge University Press},
+  address = {Cambridge},
+  year = {1997},
+  note = {ISBN 0-521-57391-2},
+  url = {http://statwww.epfl.ch/davison/BMA/},
+}
+@Book{R-rmarkdown_a,
+  title = {R Markdown: The Definitive Guide},
+  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2018},
+  isbn = {9781138359338},
+  url = {https://bookdown.org/yihui/rmarkdown},
+}
+@Book{R-rmarkdown_b,
+  title = {R Markdown Cookbook},
+  author = {Yihui Xie and Christophe Dervieux and Emily Riederer},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2020},
+  isbn = {9780367563837},
+  url = {https://bookdown.org/yihui/rmarkdown-cookbook},
+}
