--- a/analysis/_old/VSS_analyses.Rmd
+++ b/analysis/_old/VSS_analyses.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "VisualVocab - VSS abstract, distractor analysis"
-author: "Bria Long, Anya Ma"
+author: ""
 date:  "`r Sys.Date()`"
 output:
   html_document:
